# elf64-context-hash

./: .gitignore  README.md  pyproject.toml
elf64_context_hash/: __init__.py  cli.py  constants.py  elf_processing.py  loaders.py
elf64_context_hash/model/: predictor.py
src/: cli.py  constants.py  elf_processing.py  loaders.py
src/elf64_context_hash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/model/: encoder.py
